# device-gateway-ui

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: celery_app.py  config.py  database.py  database_init.py  main.py  models.py  tasks.py
backend/app/routers/: scheduler.py
backend/app/services/: scheduler.py  shell_executor.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: page.tsx
frontend/src/app/config/: page.tsx
frontend/src/app/scheduler/: page.tsx
frontend/src/components/: DeviceStatusCard.tsx  EnvironmentBanner.tsx  OperationCard.tsx  RecurrenceSelector.tsx  ScheduleCalendar.tsx  ScheduleForm.tsx  SimpleRecurrenceSelector.tsx  TopologyViewer.tsx  UpcomingSchedules.tsx
frontend/src/components/ui/: Button.tsx  Card.tsx
frontend/src/context/: EnvironmentContext.tsx
frontend/src/hooks/: useEnvironmentInfo.ts
frontend/src/lib/: api.ts  scheduler-api.ts
